<resources>
    <string name="app_name">HogwardtsLibrary</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_home_second">Hello HomeSecondFragment. Arg: %1$s</string>
    <string name="hello_dashboard_second">Hello DashboardSecondFragment. Arg: %1$s</string>
    <string name="hello_notifications_second">Hello NotificationsSecondFragment. Arg: %1$s</string>
    <string name="title_students">Students</string>
    <string name="title_houses">Houses</string>
    <string name="title_spells">Spells</string>

    <string name="home_second">Home Second</string>
    <string name="welcome_title">"Добро пожаловать в школу магии и волшебства - Хогвартс "</string>
    <string name="welcome_subtitle">Наденьте распределительную шляпу</string>
    <string name="welcome_name_hint">Имя и фамилия</string>
    <string name="welcome_select_faculty">Распределить</string>
    <string name="welcome_selected">Поздравляем! Ваш факультет [faculty_name]</string>
    <string name="welcome_selecting">Распределяю...</string>
    <string name="welcome_next">Зайти в школу</string>
    <string name="students_search_hint">введите имя для поиска</string>
    <string name="loading">Загружаю данные...</string>
    <string name="house_detail_leader">The leadersip of [LEADER_NAME]</string>
    <string name="house_detail_owner">Founded by: [FOUDER_NAME]</string>
    <string name="house_detail_ghost">Main ghost: [GHOST_NAME]</string>
    <string name="spell_charm">Charm</string>
    <string name="spell_spell">Spell</string>
    <string name="spell_jinx">Jinx</string>
    <string name="spell_curse">Curse</string>
</resources>