<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.loftblog.hogwardtslibrary.ui.students.StudentsFragment"
        android:label="@string/title_students"
        tools:layout="@layout/fragment_students">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/navigation_home_second" />
    </fragment>
    <fragment
        android:id="@+id/navigation_home_second"
        android:name="com.loftblog.hogwardtslibrary.ui.students.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/navigation_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.loftblog.hogwardtslibrary.ui.houses.HousesFragment"
        android:label="@string/title_houses"
        tools:layout="@layout/fragment_houses" >
        <action
            android:id="@+id/action_navigation_dashboard_to_houseDetailFragment"
            app:destination="@id/houseDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.loftblog.hogwardtslibrary.ui.spells.SpellsFragment"
        android:label="@string/title_spells"
        tools:layout="@layout/fragment_spells" />
    <fragment
        android:id="@+id/houseDetailFragment"
        android:name="com.loftblog.hogwardtslibrary.ui.house.HouseDetailFragment"
        android:label="house_detail_fragment"
        tools:layout="@layout/house_detail_fragment" >
        <argument
            android:name="House"
            app:argType="com.loftblog.hogwardtslibrary.ui.house.Houses"
            android:defaultValue="Gryffindor" />
    </fragment>
</navigation>